# alkahest

./: .cliff.toml  .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  TESTING.md  lsan.supp  pyproject.toml  valgrind.supp
.github/workflows/: alkahest-semver-check.yml  ci-cross.yml  ci.yml  cuda_nightly.yml  docs.yml  lean.yml  playground.yml  release.yml  website.yml
agent-benchmark/: harness.py  run.py  tasks.py
agent-benchmark/skills/: mathematica.md  sympy.md
alkahest-core/: Cargo.toml  build.rs
alkahest-core/benches/: alkahest_bench.rs
alkahest-core/examples/: dump_ptx.rs  (+1 more)
alkahest-mlir/: Cargo.toml
alkahest-py/: Cargo.toml
alkahest-skill/: alkahest.md
benchmarks/: cas_comparison.py  criterion_to_report.py  python_bench.py  tasks.py
demo-playground/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
docs/: design.md  features.md  overview.md
examples/: agent_workflow.py  ball_arithmetic.py  calculus.py  jit_eval.py  ode_modeling.py  parallel_simplify.py  pattern_rewriting.py  phase3_polynomials.md  phase3_polynomials.py  polynomials.py
fuzz/: Cargo.toml
scripts/: check_api_freeze.py  check_error_codes.py  install-wolfram.sh
tests/: _step_logs.py  conftest.py  lean_corpus.py  solver_corpus.py  test_algebraic_integration.py  test_api.py  test_oracle.py  test_parse.py  test_pretty.py  test_properties.py  test_smoke.py  test_v02.py  test_v03.py  test_v04.py  test_v04_phases.py  test_v10.py  test_v15.py  test_v16.py
website/: .gitignore  README.md  build.ts  package.json
(+177 files in other folders)
