[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "alkahest"
version = "0.1.0"
description = "A modern high-performance computer algebra system"
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.maturin]
python-source = "python"
manifest-path = "alkahest-py/Cargo.toml"
module-name = "alkahest"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []
